@@ -14,6 +14,7 @@ supported-spider=\n[img=entity/__1__] __ENTITY____1____
 etc=\n(Possibly more not shown here)
 docked-spider=Docked __ENTITY____1____
 cannot-command=Cannot command docked spider-vehicle.
+undock-tooltip=Release spider-vehicle from the dock
 
 [item-name]
 ss-space-spidertron=Space Spidertron
