@@ -6,6 +6,7 @@ Date: ??.09.2022
   Changes:
     - Now requires Factorio 1.1.69 or higher.
     - Better compatability with Spidertron Enhancements and Spidertron Patrols. (Thanks Xorimuth!)
+    - Changed `Undock` button location.
   Bugfixes:
     - Fix possible crash when docked spider no longer exist after mod change.
 ---------------------------------------------------------------------------------------------------
